mods to css and index

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,6 @@ body {
 
 header {
     background-color: rgba(70, 141, 252, 0.5);
-    text-align: center;
     margin: 0;
     padding: 0;
 }
@@ -26,4 +25,79 @@ h1 {
     padding: 0;
     font-size: 56px;
     font-style: italic;
+    text-align: center;
+}
+
+.hero-image {
+    height: 10%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+div {
+    width: 60%;
+    height: 60%;
+    background: transparent;
+    font-weight: bold;
+    position: relative;
+    animation: mymove 12s infinite;
+}
+
+#div1 {
+    background: transparent url("../img/surfer1.jpg") no-repeat center;
+    animation-timing-function: linear;
+    padding: 50px;
+}
+
+#div2 {
+    background: transparent url("../img/surfer3.jpg") no-repeat center;
+    animation-timing-function: ease;
+    padding: 50px;
+}
+
+#div3 {
+    background: transparent url("../img/surfer5.jpg") no-repeat center;
+    animation-timing-function: ease-in;
+    padding: 50px;
+}
+
+#div4 {
+    background: transparent url("../img/surfer2.jpg") no-repeat center;
+    animation-timing-function: ease-out;
+    padding: 50px;
+}
+
+#div5 {
+    background: transparent url("../img/surfer4.jpg") no-repeat top;
+    animation-timing-function: ease-in-out;
+    padding: 50px;
+}
+
+@keyframes mymove {
+    from {
+        left: 0px;
+    }
+
+    to {
+        left: 1000px;
+    }
+}
+
+
+footer{
+    background-color: rgba(70, 141, 252, 0.5);
+    margin: 0;
+    padding: 0;   
+    clear: both;
+    float: both;
 }
